[gd_scene load_steps=11 format=3 uid="uid://bjgb68jb8h7h5"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_0wyc4"]
[ext_resource type="Texture2D" uid="uid://b7y71k1jgvw3b" path="res://brackeys_platformer_assets - kopie/sprites/Background_1.png" id="1_1jr0m"]
[ext_resource type="FontFile" uid="uid://bfogft582ect0" path="res://brackeys_platformer_assets - kopie/fonts/PixelOperator8-Bold.ttf" id="1_861do"]
[ext_resource type="Theme" uid="uid://co56ai25f5dd4" path="res://default.tres" id="2_weejc"]
[ext_resource type="Texture2D" uid="uid://cf7msjngvdhyd" path="res://pause_obrazek.png" id="3_nqvcv"]
[ext_resource type="FontFile" uid="uid://dsa0wwoxagbr" path="res://brackeys_platformer_assets - kopie/fonts/PixelOperator8.ttf" id="3_ol740"]
[ext_resource type="FontFile" uid="uid://c1g1sik3myb0k" path="res://Fonts - kopie/PixelifySans-Bold.ttf" id="7_5u0pd"]

[sub_resource type="Animation" id="Animation_1cukv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Quit:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Respawn:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ne8jp"]
resource_name = "gameover"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Quit:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Respawn:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d7esd"]
_data = {
"RESET": SubResource("Animation_1cukv"),
"gameover": SubResource("Animation_ne8jp")
}

[node name="Game_Over" type="CanvasLayer"]
script = ExtResource("1_0wyc4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d7esd")
}
autoplay = "gameover"

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_nqvcv")

[node name="TextureRect3" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_nqvcv")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1jr0m")

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 268.0
offset_top = 117.0
offset_right = 820.0
offset_bottom = 181.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_861do")
theme_override_font_sizes/font_size = 64
text = "GAME OVER"

[node name="Quit" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 449.0
offset_top = 462.0
offset_right = 662.0
offset_bottom = 494.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_weejc")
theme_override_fonts/font = ExtResource("3_ol740")
theme_override_font_sizes/font_size = 32
text = "QUIT"

[node name="Respawn" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 453.0
offset_top = 312.0
offset_right = 657.0
offset_bottom = 344.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_weejc")
theme_override_fonts/font = ExtResource("3_ol740")
theme_override_font_sizes/font_size = 32
text = "RESPAWN"

[node name="Label2" type="Label" parent="."]
offset_left = 872.0
offset_top = 547.0
offset_right = 1038.0
offset_bottom = 643.0
theme_override_fonts/font = ExtResource("7_5u0pd")
theme_override_font_sizes/font_size = 64
text = "00.00"

[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Respawn" to="." method="_on_respawn_pressed"]
